Dataset serach page styling (fixed spacings)

--- a/modules/ytp-assets-common/resources/styles/main.css
+++ b/modules/ytp-assets-common/resources/styles/main.css
@@ -4120,6 +4120,7 @@ article.module {
   background: none !important;
 }
 .module-content {
+  padding-left: 0;
   padding-right: 0;
 }
 .module-content select,
@@ -4347,7 +4348,10 @@ span.byline-contentype {
   margin-bottom: 7px;
 }
 ul.dataset-list {
-  padding-left: 20px;
+  padding-left: 0px;
+}
+ul.dataset-list li.dataset-item {
+  margin-bottom: 8px;
 }
 .byline {
   margin: 15px 0;
@@ -4361,6 +4365,19 @@ ul.no-bullet {
 }
 ul.no-bullet li:hover {
   background-color: rgba(128, 128, 128, 0.05);
+}
+#page_wrapper .search-form {
+  padding-bottom: 12px;
+  margin-bottom: 8px;
+}
+#page_wrapper .search-form h1 {
+  margin-bottom: 4px;
+}
+#page_wrapper .search-form .control-order-by {
+  margin-top: 5px;
+}
+#page_wrapper .search-form .filter-list {
+  margin-top: 0px;
 }
 .form-horizontal .control-group {
   *zoom: 1;
@@ -4727,6 +4744,9 @@ dd {
   width: 25px;
   color: #ffffff;
 }
+.wrapper.no-nav h1.content-heading {
+  margin-left: 0;
+}
 .wrapper.no-nav .content_action {
   position: absolute;
   right: 0;
@@ -4997,6 +5017,8 @@ a:focus {
   box-shadow: 0px 6px 14px -2px rgba(0, 0, 0, 0.6);
 }
 .footer {
+  margin: 0;
+  padding: 0;
   border: none;
 }
 .main-container,
@@ -5027,6 +5049,7 @@ body {
   background: url("../images/stamen_background.jpg?timestamp=1408081485854") 50% 50% fixed no-repeat;
   background-size: cover;
   padding-top: 54px;
+  padding-bottom: 32px;
 }
 a {
   color: #266ab9;
