--- a/modules/ytp-assets-common/src/less/content.less
+++ b/modules/ytp-assets-common/src/less/content.less
@@ -5,6 +5,7 @@ body {
   background: url("../images/stamen_background.jpg?timestamp=<%= timestamp %>") 50% 50% fixed no-repeat;
   background-size: cover;
   padding-top: 54px;
+  padding-bottom: 32px;
 }
 
 a {
